--- a/ui/style/custom.css
+++ b/ui/style/custom.css
@@ -12,7 +12,7 @@ h1 {
     margin: 10px;
 }
 
-h1 > a, h1 > a:hover {
+a, a:hover {
     color: white;
     text-decoration: none;
 }
@@ -22,7 +22,7 @@ h1 > a > small {
 }
 
 .userinfo {
-    padding: 10px;
+    padding: 9px 0 5px 0;
     color: white;
 }
 
@@ -56,10 +56,12 @@ hr {
     background-color: lightpink;
 }
 
-.footer {
-    margin: 0 auto;
+footer {
+    text-align: center;
     position: absolute;
     bottom: 0px;
+    left: 0px;
+    width: 100%;
     color: white;
     padding: 10px;
 }
