--- a/ui/style/custom.css
+++ b/ui/style/custom.css
@@ -71,7 +71,7 @@ footer {
 
  .loginform {
     position: relative;
-    top: 200px;
+    top: 100px;
 }
 
 .myprofile {
@@ -84,3 +84,11 @@ footer {
     border-radius: 50%;
 }
 
+.userlist {
+    margin-top: 50px;
+    background-color: #eee;
+    border: 1px solid grey;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+}
