--- a/ui/style/custom.css
+++ b/ui/style/custom.css
@@ -4,6 +4,7 @@ html {
 body {
     background: linear-gradient( rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5) ), url('../img/mount.jpg');
     background-position-x: center;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     height: 100%;
     background-height:  100%;
@@ -61,7 +62,7 @@ hr {
 
 footer {
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     left: 0px;
     width: 100%;
@@ -77,11 +78,18 @@ footer {
 .myprofile {
     position: relative;
     top: 100px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 30px;
+}
 
+.myprofileactions {
+    text-align: center;
 }
 
 .avatar {
     border-radius: 50%;
+    margin-right: 15px;
 }
 
 .userlist {
@@ -91,4 +99,9 @@ footer {
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
     border-radius:4px;
+
+}
+
+.newRoleList {
+    margin-bottom: 50px;
 }
